--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@applitools/eyes-playwright": "^1.33.2",
     "@playwright/test": "^1.49.1",
     "@types/node": "^22.10.2"
   }
